--- a/our-hotels/hotel-vedanta/how-to-reach/index.html
+++ b/our-hotels/hotel-vedanta/how-to-reach/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="profile" href="http://gmpg.org/xfn/11">	
-    <title>How to Reach &#8211; Sai Palace Hotels</title>
+    <title>How to Reach &#8211; Vedanta Hotel</title>
 <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
 <link rel='dns-prefetch' href='http://s.w.org/' />
 <link href='https://fonts.gstatic.com/' crossorigin rel='preconnect' />
