contact home checked 3

--- a/our-hotels/hotel-vedanta/rooms-suits/index.html
+++ b/our-hotels/hotel-vedanta/rooms-suits/index.html
@@ -311,7 +311,7 @@ flex-basis: 40%;
 	<li id="menu-item-198" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-198"><a href="#">Sai Palace Hotel &#038; Gardens Mira Road</a></li>
 </ul>
 </li> -->
-<li id="menu-item-118" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-118"><a href="https://hotel.vedantabiz.com/booking">Book Now</a>
+<li id="menu-item-118" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-118"><a href="https://booking.vedantabiz.com">Book Now</a>
 
 </li>
 </ul></div>    <a href="#" data-component="offcanvas" data-target="#offcanvas-wrapper" data-direction="right" data-width="300px" data-push="false">
@@ -347,7 +347,7 @@ flex-basis: 40%;
 	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-198"><a href="#">Sai Palace Hotel &#038; Gardens Mira Road</a></li>
 </ul>
 </li> -->
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-118"><a href="https://hotel.vedantabiz.com/booking">Book Now</a>
+<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-118"><a href="https://booking.vedantabiz.com">Book Now</a>
 <!-- <ul class="sub-menu">
 	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-194"><a href="https://secure.staah.com/common-cgi/package/packagebooking.pl?propertyId=1881">Sai Palace Hotel Andheri</a></li>
 	<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1231"><a href="https://secure.staah.com/common-cgi/package/packagebooking.pl?propertyId=13033">Hotel Sai Palace Mangalore</a></li>
